# dsda-launcher

./: CMakeLists.txt
.github/workflows/: main.yml
cmake/: install.cmake  packaging-appimage.cmake  packaging-linux.cmake  packaging-macos.cmake  packaging.cmake
guides/: compileLinux.md
src/: about.ui  dsda-launcher.pro  dsda-launcher.rc  historylist.ui  icons.qrc  mainwindow.ui  mainwindow_bottom.cpp  settings.cpp  settings.ui
